# clawctl

./: .env.example  .gitignore  GITOPS_AND_MIGRATION.md  OPENCLAW_TIPS.md  README.md  SPECS.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  skill-sync.yml
clawctl/: __init__.py  databricks.py  deploy.py  main.py  server.py  ssh_utils.py  status.py  tunnel.py
config/: HEARTBEAT.md  SOUL.md  cloud-init.yaml  openclaw.json
databricks-bundle/: databricks.yml
databricks-bundle/src/: build_analytics.py  ingest_sessions.py
databricks-infra/: .gitignore  main.tf  outputs.tf  secrets.tf  unity_catalog.tf  variables.tf
docker/: docker-compose.dev.yml  docker-compose.yml
docs/: databricks-architecture.md  databricks-integration.md
scripts/: backup.sh  bootstrap-vps.sh  sync-skills-pr.sh  upload-to-databricks.sh
skills/: README.md  nba-data.skill
skills/my-custom-skill/: SKILL.md
skills/nba-data/: SKILL.md
skills/nba-data/references/: api_docs.md
skills/nba-data/scripts/: nba_alerts.py  nba_games.py  nba_news.py  nba_preview.py  nba_review.py  nba_standings.py  nba_teams.py
tests/: test_databricks.py  test_deploy.py  test_main.py  test_ssh_utils.py
